test/corpus/fail/M0174.mo
=========
M0174.mo
=========

from_candid (to_candid (1)) : Nat

---

(source_file
  (exp_dec
    (annot_exp_object
      (from_candid_exp
        (par_exp
          (to_candid_exp
            (lit_exp
              (int_literal)))))
      (path_typ
        (typ_path
          (type_identifier))))))
